<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Take A Break</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Email_Icon">Email Icon</string>
    <string name="User_Icon">User Icon</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Phone_Icon">Phone Icon</string>
    <string name="Phone">Phone</string>
    <string name="Pass_Icon">Pass Icon</string>
    <string name="Password">Password</string>
    <string name="passDescription">Re-Password</string>
    <string name="RePass_text">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="registerLink">Not registered yet? Register here</string>
    <string name="loginLink">Already registered? Login here</string>
    <string name="Map_Menu">Map Menu</string>
    <string name="Search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="Log_out">Log out</string>
    <string name="msg_about_description">Some thing about take a break</string>
    <string name="searching">Searching....</string>
    <string name="title">Take A Break</string>
    <string name="pickUpDetails">pickUpDetails</string>
    <string name="defaultCity">Bangalore</string>
    <string name="pick_up_details">Pick Up Details</string>
    <string name="select_city">Select City:</string>
    <string name="cont">Continue</string>
    <string name="date">From:</string>

    <string-array name="Content">
        <item>About TAB</item>
        <item>Cars Types</item>
        <item>City List</item>
        <item>Trip Booking</item>
        <item>Spcial Trips</item>
        <item>F.A.Q</item>
    </string-array>

</resources>