<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="20dp" >

        <EditText
            android:id="@+id/RegUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/Username"
            android:singleLine="true"
            android:textColorHint="#000000" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/RegEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RegUsername"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/RegPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RegEmail"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:singleLine="true"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/RegPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RegPhone"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/RegPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RegPass"
            android:ems="10"
            android:hint="@string/RePass_text"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RegPass2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login"
            android:height="40dp"
            android:text="@string/Register"
            android:textColor="#fff"
            android:width="100dp" />

        <Button
            android:id="@+id/btnLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btnRegister"
            android:background="@android:color/transparent"
            android:height="60dp"
            android:text="@string/loginLink"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:width="180dp" />
    </RelativeLayout>

</ScrollView>