<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp" >
        
        <AutoCompleteTextView
            android:id="@+id/LogEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#000000" >

            <requestFocus />
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/LogPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LogEmail"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LogPass"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_login"
            android:height="50dp"
            android:text="@string/Login"
            android:textColor="#fff"
            android:width="100dp" />

        <Button
            android:id="@+id/LinkRegisterId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:height="80dp"
            android:text="@string/registerLink"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:width="160dp" />
    </RelativeLayout>

</ScrollView>